--- a/doc/antora/modules/developers/nav.adoc
+++ b/doc/antora/modules/developers/nav.adoc
@@ -3,6 +3,7 @@
 ** xref:coding-methods.adoc[Coding Methods]
 ** xref:coverage.adoc[Code Coverage]
 ** xref:profile.adoc[Profiling]
+** xref:coccinelle.adoc[Semantic Patches]
 ** xref:contributing.adoc[Contributing]
 ** xref:module_interface.adoc[Module Interface]
 ** xref:release-method.adoc[Release Method]
