--- a/doc/antora/modules/developers/pages/index.adoc
+++ b/doc/antora/modules/developers/pages/index.adoc
@@ -8,6 +8,7 @@ List with some usual howtos for FreeRADIUS.
 * xref:coding-methods.adoc[Coding Methods]
 * xref:coverage.adoc[Code Coverage]
 * xref:profile.adoc[Profiling]
+* xref:coccinelle.adoc[Semantic Patches]
 * xref:contributing.adoc[Contributing]
 * xref:installation:dependencies.adoc[Build dependencies]
 * xref:module_interface.adoc[Module Interface]
