--- a/doc/antora/modules/reference/pages/unlang/case.adoc
+++ b/doc/antora/modules/reference/pages/unlang/case.adoc
@@ -12,18 +12,17 @@ The `case` statement is used to match data inside of a
 xref:unlang/switch.adoc[switch] statement.  The `case` statement cannot be used
 outside of a xref:unlang/switch.adoc[switch] statement.
 
-
-The `<match>` text can be an attribute reference such as `&User-Name`,
-or it can be a xref:type/string/index.adoc[string].  If the match
-text is a dynamically expanded string, then the match is performed on
-the output of the string expansion.
+The _<match>_ text *must* be static.  That is, the _<match>_ text
+cannot be an attribute expansion, or an `xlat`
+xref:type/string/index.adoc[string].
 
 The keyword `default` can be used to specify the default action to
 take inside of a xref:unlang/switch.adoc[switch] statement.
 
-If no `<match>` text is given, it means that the `case` statement is
+If no _<match>_ text is given, it means that the `case` statement is
 the "default" and will match all which is not matched by another
 `case` statement inside of the same xref:unlang/switch.adoc[switch].
+This syntax is deprecated, and will be removed in a future release.
 
 .Example
 [source,unlang]
