--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+freeradius (3.0.23+git) unstable; urgency=medium
+
+  * New upstream version.
+
+ -- Alan DeKok <aland@freeradius.org>  Tue, 17 May 2021 12:00:00 -0500
+
 freeradius (3.0.22+git) unstable; urgency=medium
 
   * New upstream version.
