Amend docs to match new %(date: ) syntax

--- a/doc/antora/modules/raddb/pages/mods-available/date.adoc
+++ b/doc/antora/modules/raddb/pages/mods-available/date.adoc
@@ -22,8 +22,8 @@ is passed.
 
 The input string can be:
 
-  - an attribute name of a date or integer attribute;
-  - an attribute name of a string attribute;
+  - an expanded date or integer attribute;
+  - an expanded string attribute;
   - the fixed strings `request` or `now`.
 
 ."Attribute" mode:
@@ -74,7 +74,7 @@ The core `xlat`, `%T` returns the request timestamp in `ISO` format
 including milliseconds. This expansion returns it without the
 millisecond component.
 
-Use e.g. `%{date_iso:request}:`
+Use e.g. `%(date_iso:request):`
 
 
 == Default Configuration
