Update docs for new syntax of %(mschap: )

--- a/doc/antora/modules/howto/pages/modules/mschap/index.adoc
+++ b/doc/antora/modules/howto/pages/modules/mschap/index.adoc
@@ -43,7 +43,7 @@ several options for the arguments, in particular username and domain:
 
 * `–username=%{User-Name}` - this will fail if you’re using realms or
 host-based auth
-* `–username=%{mschap:User-Name}` - this will fail if using using suffix
+* `–username=%(mschap:User-Name)` - this will fail if using using suffix
 i.e. user@domain
 
 You’ll need to fit this to your local needs.
@@ -81,8 +81,8 @@ mschap {
 
     # initial data to send
     # this MUST be supplied
-    ntlm_auth_username = "username: %{mschap:User-Name}"
-    ntlm_auth_domain = "nt-domain: %{%{mschap:NT-Domain}:-YOURDOMAIN}"
+    ntlm_auth_username = "username: %(mschap:User-Name)"
+    ntlm_auth_domain = "nt-domain: %{%(mschap:NT-Domain):-YOURDOMAIN}"
 
     # Or, you could try:
     ntlm_auth_username = "full-username: %{User-Name}"
