--- a/doc/antora/modules/raddb/pages/mods-available/unbound.adoc
+++ b/doc/antora/modules/raddb/pages/mods-available/unbound.adoc
@@ -14,6 +14,36 @@ FQDNs to be resolved during request processing.
 filename = "${raddbdir}/mods-config/unbound/default.conf"
 timeout = 3000
 
+## xlat for DNS resolution
+
+An xlat based on the instance name can be used to perform DNS lookups.
+
+.Example
+
+```
+%(dns:www.example.com A)
+%(dns:www.example.com AAAA)
+```
+
+Given an instance `dns` the above xlats will perform A record and
+AAA record lookups on www.example.com
+
+.Example
+
+```
+%(dns:1.1.168.192.in-addr.arpa PTR)
+```
+
+The above example will perform reverse DNS lookup on 192.168.1.1
+
+.Example
+```
+%(dns:example.com MX 1)
+```
+
+The above example will perform an MX lookup on example.com only
+returning the first record.
+
 == Default Configuration
 
 ```
