--- a/src/modules/rlm_unbound/rlm_unbound.5
+++ b/src/modules/rlm_unbound/rlm_unbound.5
@@ -36,14 +36,20 @@ any libunbound configuration values.
 .PP
 An instance named, for example, "dns" will provide the following xlat
 functionalities:
-.IP %{dns-a:<owner>}
-Performs an A lookup for the owner name, returning a stringified IPv4
-address.  Only the first A record in the RRSET will be returned.
-.IP %{dns-aaaa:<owner>}
-Performs an AAAA lookup for the owner name, returning a stringified IPv6
-address.  Only the first AAAA record in the RRSET will be returned.
-.IP %{dns-ptr:<owner>}
+.IP %(dns:<owner> <record type> [<limit>])
+Perform the lookup of <record type> against <owner> returning up to
+<limit> results.  The returned data type is appropriate to the record
+type being queried.
+.IP %(dns:<owner> A)
+Performs an A lookup for the owner name, returning the results as IPv4
+addresses.
+.IP %(dns:<owner> AAAA)
+Performs an AAAA lookup for the owner name, returning the results as IPv6
+addresses.
+.IP %(dns:<owner> PTR)
 Performs a PTR lookup for the owner.
+.IP %(dns:<owner> MX 1)
+Performs an MX lookup for the owner, returning just the first result.
 .PP
 .SH CAVEATS
 Logging from rlm_unbound can be problematic, especialy if more than one
