--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -6,6 +6,7 @@ FreeRADIUS 3.0.23 Mon 17 May 2021 12:00:00 EDT urgency=low
 	  it back to life.
 	* Add Post-Auth-Type "Client-Lost" which should make it easier
 	  to log when clients stop responding.
+	* Add sites-available/totp as an example of how to use TOTP.
 
 	Bug fixes
 	* Fix crash in some cases when home server is down, in debug mode.
