Update documentation for new %(exec: ) syntax

--- a/doc/antora/modules/howto/pages/modules/mschap/index.adoc
+++ b/doc/antora/modules/howto/pages/modules/mschap/index.adoc
@@ -176,7 +176,7 @@ Or:
 . update via exec/script
 
 ```
-local_cpw = `%{exec:/my/script %{User-Name} %{MS-CHAP-New-Password.Cleartext}}`
+local_cpw = `%(exec:/my/script %{User-Name} %{MS-CHAP-New-Password.Cleartext})`
 ```
 
 WARNING: Wherever possible, you should use `MS-CHAP-New-NT-Password`. The
