--- a/doc/antora/modules/raddb/pages/mods-available/mschap.adoc
+++ b/doc/antora/modules/raddb/pages/mods-available/mschap.adoc
@@ -342,7 +342,7 @@ mschap {
 #		ntlm_auth = "/usr/bin/ntlm_auth --helper-protocol=ntlm-change-password-1"
 #		ntlm_auth_username = "username: %(mschap:User-Name)"
 #		ntlm_auth_domain = "nt-domain: %(mschap:NT-Domain)"
-#		local_cpw = "%{exec:/path/to/script %(mschap:User-Name) %{MS-CHAP-New-Password.Cleartext}}"
+#		local_cpw = "%(exec:/path/to/script %(mschap:User-Name) %{MS-CHAP-New-Password.Cleartext})"
 #		local_cpw = "%{sql:UPDATE radcheck set value='%{MS-CHAP-New-NT-Password}' where username='%{User-Name}' and attribute='NT-Password'}"
 	}
 #	use_open_directory = yes
