--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -1,3 +1,10 @@
+FreeRADIUS 3.0.24 Thu 10 Jun 2021 12:00:00 EDT urgency=low
+	Feature improvements
+	*
+
+	Bug fixes
+	*
+
 FreeRADIUS 3.0.23 Thu 10 Jun 2021 12:00:00 EDT urgency=low
 	Feature improvements
 	* Update dictionary.aruba
