--- a/doc/antora/modules/raddb/pages/sites-available/default.adoc
+++ b/doc/antora/modules/raddb/pages/sites-available/default.adoc
@@ -1412,17 +1412,11 @@ send Access-Accept {
 #	wimax
 #	update reply {
 #		&Reply-Message += "%{session-state.TLS-Cert-Serial}"
-#		&Reply-Message += "%{session-state.TLS-Cert-Expiration}"
+#		&Reply-Message += "%{session-state.TLS-Cert-Not-After}"
 #		&Reply-Message += "%{session-state.TLS-Cert-Subject}"
 #		&Reply-Message += "%{session-state.TLS-Cert-Issuer}"
 #		&Reply-Message += "%{session-state.TLS-Cert-Common-Name}"
 #		&Reply-Message += "%{session-state.TLS-Cert-Subject-Alt-Name-Email}"
-#		&Reply-Message += "%{session-state.TLS-Client-Cert-Serial}"
-#		&Reply-Message += "%{session-state.TLS-Client-Cert-Expiration}"
-#		&Reply-Message += "%{session-state.TLS-Client-Cert-Subject}"
-#		&Reply-Message += "%{session-state.TLS-Client-Cert-Issuer}"
-#		&Reply-Message += "%{session-state.TLS-Client-Cert-Common-Name}"
-#		&Reply-Message += "%{session-state.TLS-Client-Cert-Subject-Alt-Name-Email}"
 #	}
 #	insert_acct_class
 #	if (&reply.EAP-Session-Id) {
