--- a/doc/antora/modules/raddb/pages/mods-available/json.adoc
+++ b/doc/antora/modules/raddb/pages/mods-available/json.adoc
@@ -66,7 +66,7 @@ fields can be accessed using 'map' as shown in the example below.
 
 [source, unlang]
 ----
-map json "%{rest:GET http://example.org/api/user/%{User-Name}" {
+map json "%(rest:GET http://example.org/api/user/%{User-Name})" {
   &Tmp-Integer-0  := '$.account number'
   &Group          += '$.groups.*'
 }
