--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -1,9 +1,14 @@
 FreeRADIUS 3.0.24 Thu 10 Jun 2021 12:00:00 EDT urgency=low
 	Feature improvements
-	*
+	* EAP-FAST will print errors and continue, rather than exiting.
+	* Add sanitizer options to configure script.
+	* Log information needed by Wireshark to decode TLS sessions.
+	* Allow more liberal SQL commands in rlm_sql_map.
 
 	Bug fixes
-	*
+	* Fix crash in trustrouter module (#4115). Patch from Alejandro Perez
+	* Fix crash in state handling.
+	* Don't alter global options in redhat logrotate scripts.
 
 FreeRADIUS 3.0.23 Thu 10 Jun 2021 12:00:00 EDT urgency=low
 	Feature improvements
