--- a/doc/antora/modules/raddb/pages/mods-available/unbound.adoc
+++ b/doc/antora/modules/raddb/pages/mods-available/unbound.adoc
@@ -11,8 +11,49 @@ FQDNs to be resolved during request processing.
 
 ## Configuration Settings
 
-filename = "${raddbdir}/mods-config/unbound/default.conf"
-timeout = 3000
+filename:: libunbound configuration file.  See `man unbound.conf` for
+details of options which can be set in this file.
+
+Defaults to `"${raddbdir}/mods-config/unbound/default.conf"`
+
+timeout:: maximum time to wait for a DNS resolution.
+
+Defaults to 3000
+
+resolvconf:: resolv.conf file to load.  Without this set unbound will
+query root servers.
+
+hosts:: hosts file to load.
+
+## xlat for DNS resolution
+
+An xlat based on the instance name can be used to perform DNS lookups.
+
+.Example
+
+```
+%(dns:www.example.com A)
+%(dns:www.example.com AAAA)
+```
+
+Given an instance `dns` the above xlats will perform A record and
+AAA record lookups on www.example.com
+
+.Example
+
+```
+%(dns:1.1.168.192.in-addr.arpa PTR)
+```
+
+The above example will perform reverse DNS lookup on 192.168.1.1
+
+.Example
+```
+%(dns:example.com MX 1)
+```
+
+The above example will perform an MX lookup on example.com only
+returning the first record.
 
 == Default Configuration
 
